tests/rosetta/out/Scala/21-game.scala
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
object _21_game {
  def parseIntStr(str: String): Int = {
    var i = 0
    var neg = false
    if (str.length > 0 && str.substring(0, 1) == "-") {
      neg = true
      i = 1
    }
    var n = 0
    val digits = Map("0" -> 0, "1" -> 1, "2" -> 2, "3" -> 3, "4" -> 4, "5" -> 5, "6" -> 6, "7" -> 7, "8" -> 8, "9" -> 9)
    while (i < str.length) {
      n = n * 10 + (digits).apply(str.substring(i, i + 1))
      i += 1
    }
    if (neg) {
      n = -n
    }
    return n
  }
  
  def main() = {
    var total = 0
    var computer = (now() % 2).asInstanceOf[Int] == 0
    println("Enter q to quit at any time\n")
    if (computer) {
      println("The computer will choose first")
    } else {
      println("You will choose first")
    }
    println("\n\nRunning total is now 0\n\n")
    var round = 1
    var done = false
    while (!done) {
      println("ROUND " + round.toString + ":\n\n")
      var i = 0
      while (i < 2 && (!done)) {
        if (computer) {
          var choice = 0
          if (total < 18) {
            choice = (now() % 3).asInstanceOf[Int] + 1
          } else {
            choice = 21 - total
          }
          total += choice
          println("The computer chooses " + choice.toString)
          println("Running total is now " + total.toString)
          if (total == 21) {
            println("\nSo, commiserations, the computer has won!")
            done = true
          }
        } else {
          while (true) {
            println("Your choice 1 to 3 : ")
            val line = input()
            if (line == "q" || line == "Q") {
              println("OK, quitting the game")
              done = true
              return
            }
            var num = parseIntStr(line)
            if (num < 1 || num > 3) {
              if (total + num > 21) {
                println("Too big, try again")
              } else {
                println("Out of range, try again")
              }
              // continue
            }
            if (total + num > 21) {
              println("Too big, try again")
              // continue
            }
            total += num
            println("Running total is now " + total.toString)
            return
          }
          if (total == 21) {
            println("\nSo, congratulations, you've won!")
            done = true
          }
        }
        println("\n")
        computer = !computer
        i += 1
      }
      round += 1
    }
  }
  
  def main(args: Array[String]): Unit = {
    main()
  }
}
